update tampilan halaman beranda

--- a/index.html
+++ b/index.html
@@ -173,14 +173,21 @@
                     </a>
                     <div class="nav-pro-dropdown">
                         <a href="visi-misi.html" class="nav-pro-dropdown-link">Visi dan Misi</a>
-                        <a href="#" class="nav-pro-dropdown-link">Tugas Pokok dan Fungsi Pengadilan</a>
-                        <a href="#" class="nav-pro-dropdown-link">Wilayah Yurisdiksi</a>
+                        <a href="https://pa-pamekasan.go.id/halaman/detail/tugas-pokok-dan-fungsi-pengadilan"
+                            target="_blank" class="nav-pro-dropdown-link">Tugas Pokok dan Fungsi Pengadilan</a>
+                        <a href="https://pa-pamekasan.go.id/halaman/detail/wilayah-yurisdiksi" target="_blank"
+                            class="nav-pro-dropdown-link">Wilayah Yurisdiksi</a>
                         <a href="struktur-organisasi.html" class="nav-pro-dropdown-link">Struktur Organisasi</a>
-                        <a href="#" class="nav-pro-dropdown-link">Sejarah Pengadilan</a>
-                        <a href="#" class="nav-pro-dropdown-link">Daftar Nama Mantan Pimpinan</a>
-                        <a href="#" class="nav-pro-dropdown-link">Agenda Kegiatan</a>
-                        <a href="#" class="nav-pro-dropdown-link">Alamat dan Kontak Pengadilan</a>
-                        <a href="#" class="nav-pro-dropdown-link">PPNPN</a>
+                        <a href="https://pa-pamekasan.go.id/halaman/detail/sejarah-pengadilan" target="_blank"
+                            class="nav-pro-dropdown-link">Sejarah Pengadilan</a>
+                        <a href="https://pa-pamekasan.go.id/halaman/detail/daftar-nama-mantan-pimpinan" target="_blank"
+                            class="nav-pro-dropdown-link">Daftar Nama Mantan Pimpinan</a>
+                        <a href="https://pa-pamekasan.go.id/halaman/detail/agenda-kegiatan" target="_blank"
+                            class="nav-pro-dropdown-link">Agenda Kegiatan</a>
+                        <a href="https://pa-pamekasan.go.id/halaman/detail/alamat-dan-kontak-pengadilan" target="_blank"
+                            class="nav-pro-dropdown-link">Alamat dan Kontak Pengadilan</a>
+                        <a href="https://pa-pamekasan.go.id/pages/profil-pejabat-dan-pegawai" target="_blank"
+                            class="nav-pro-dropdown-link">PPNPN</a>
                     </div>
                 </li>
                 <li class="nav-pro-item">
@@ -284,10 +291,14 @@
                         <span class="nav-pro-subtext">Publikasi</span>
                     </a>
                     <div class="nav-pro-dropdown">
-                        <a href="#" class="nav-pro-dropdown-link">Arsip Berita</a>
-                        <a href="#" class="nav-pro-dropdown-link">Arsip Pengumuman</a>
-                        <a href="#" class="nav-pro-dropdown-link">Regulasi Aturan</a>
-                        <a href="#" class="nav-pro-dropdown-link">Video PTSP</a>
+                        <a href="https://pa-pamekasan.go.id/pages/arsip-berita" target="_blank"
+                            class="nav-pro-dropdown-link">Arsip Berita</a>
+                        <a href="https://pa-pamekasan.go.id/pages/arsip-pengumuman" target="_blank"
+                            class="nav-pro-dropdown-link">Arsip Pengumuman</a>
+                        <a href="https://pa-pamekasan.go.id/pages/regulasi-aturan" target="_blank"
+                            class="nav-pro-dropdown-link">Regulasi Aturan</a>
+                        <a href="https://pa-pamekasan.go.id/pages/video-ptsp" target="_blank"
+                            class="nav-pro-dropdown-link">Video PTSP</a>
                     </div>
                 </li>
                 <li class="nav-pro-item">
@@ -296,9 +307,12 @@
                         <span class="nav-pro-subtext">Info Lainnya</span>
                     </a>
                     <div class="nav-pro-dropdown">
-                        <a href="#" class="nav-pro-dropdown-link">Statistik Pengunjung</a>
-                        <a href="#" class="nav-pro-dropdown-link">Tautan Terkait</a>
-                        <a href="#" class="nav-pro-dropdown-link">Media Sosial</a>
+                        <a href="https://pa-pamekasan.go.id/pages/statistik-jumlah-pengunjung-website" target="_blank"
+                            class="nav-pro-dropdown-link">Statistik Pengunjung</a>
+                        <a href="https://pa-pamekasan.go.id/pages/tautan-terkait" target="_blank"
+                            class="nav-pro-dropdown-link">Tautan Terkait</a>
+                        <a href="https://pa-pamekasan.go.id/pages/tautan-ke-situs-sosial-media" target="_blank"
+                            class="nav-pro-dropdown-link">Media Sosial</a>
                     </div>
                 </li>
             </ul>
